# platform.upstream.geoclue

./: AUTHORS  Makefile.am  autogen.sh  configure.ac  geoclue.changes
.pc/: applied-patches
.pc/geoclue_0.12.0-20slp2.patch/: configure.ac
.pc/geoclue_0.12.0-20slp2.patch/providers/gpsd/: Makefile.am  geoclue-gpsd.c
.pc/geoclue_0.12.0-21slp2.patch/providers/gpsd/: setting.h
.pc/geoclue_0.12.0-24slp2.patch/geoclue/: gc-iface-satellite.h  geoclue-velocity.h
.pc/geoclue_0.12.0-24slp2.patch/interfaces/: gc-iface-position-full.xml
debian/: changelog  control  copyright  geoclue-gpsd.install.in  geoclue-nominatim.install.in  geoclue.install.in  libgeoclue-dev.install.in  libgeoclue.install.in  rules
debian/patches/: geoclue_0.12.0-20slp2.patch  geoclue_0.12.0-21slp2.patch  geoclue_0.12.0-22slp2.patch  geoclue_0.12.0-24slp2.patch  geoclue_0.12.0-25slp2.patch  series  tizen.patch
docs/reference/: Makefile.am  geoclue-docs.sgml  implementing-providers.xml  using-geoclue.xml
docs/tools/: spec-strip-docs.xsl
example/: Makefile.am  address-example.c  common-example.c  geocode-example.c  master-example.c  master-pos-example.c  position-async-example.c  position-example.c  revgeocode-example.c
geoclue/: Makefile.am  gc-iface-address.c  gc-iface-address.h  gc-iface-geoclue.c  gc-iface-geoclue.h  gc-iface-geocode.c  gc-iface-geocode.h  gc-iface-nmea.c  gc-iface-nmea.h  gc-iface-poi.c  gc-iface-poi.h  gc-iface-position-ext.c  gc-iface-position-ext.h  gc-iface-position.c  gc-iface-position.h  gc-iface-reverse-geocode.c  gc-iface-reverse-geocode.h  gc-iface-satellite.c  gc-iface-satellite.h  gc-iface-velocity.c  gc-iface-velocity.h  gc-provider.c  gc-provider.h  gc-web-service.c  gc-web-service.h  geoclue-accuracy.c  geoclue-address-details.c  geoclue-address-details.h  geoclue-address.c  geoclue-address.h  geoclue-error.c  geoclue-geocode.c  geoclue-geocode.h  geoclue-landmark.h  geoclue-marshal.list  geoclue-master-client.c  geoclue-master.c  geoclue-nmea.c  geoclue-nmea.h  geoclue-poi.c  (+16 more)
interfaces/: Makefile.am  gc-iface-address-full.xml  gc-iface-geoclue-full.xml  gc-iface-geocode-full.xml  gc-iface-master-client-full.xml  gc-iface-master-full.xml  gc-iface-nmea-full.xml  gc-iface-poi-full.xml  gc-iface-position-ext-full.xml  gc-iface-position-full.xml  gc-iface-reverse-geocode-full.xml  gc-iface-satellite-full.xml  gc-iface-velocity-full.xml
packaging/: geoclue.changes  geoclue.spec
providers/example/: geoclue-example.c
providers/geonames/: Makefile.am  geoclue-geonames.c  geoclue-geonames.h
providers/gpsd/: Makefile.am  geoclue-gpsd.c  setting.c  setting.h
providers/gsmloc/: Makefile.am  geoclue-gsmloc-ofono.c  geoclue-gsmloc.c  mcc.h
providers/gypsy/: geoclue-gypsy.c
providers/hostip/: Makefile.am  geoclue-hostip.c
providers/localnet/: Makefile.am  geoclue-localnet.c
providers/manual/: Makefile.am  geoclue-manual.c
providers/nominatim/: Makefile.am  geoclue-nominatim.c  geoclue-nominatim.h  geoclue-nominatim.provider
providers/plazes/: Makefile.am  geoclue-plazes.c
providers/skyhook/: Makefile.am  geoclue-skyhook.c
providers/yahoo/: Makefile.am  geoclue-yahoo.c
src/: client.c  connectivity-conic.c  connectivity-conic.h  connectivity-networkmanager.c  connectivity-networkmanager.h  connectivity.c  connectivity.h  main.c  master-provider.c  master-provider.h  master.c  master.h
test/: Makefile.am  geoclue-test-gui.c
